# Jarvis

./: .env.example  .gitignore  Cargo.toml  README.md
config/: design-tokens.toml  jarvis.example.toml
crates/jarvis-app/: Cargo.toml
crates/jarvis-app/src/: main.rs
crates/jarvis-audit/: Cargo.toml
crates/jarvis-audit/src/: lib.rs
crates/jarvis-config/: Cargo.toml
crates/jarvis-config/src/: lib.rs
crates/jarvis-core/: Cargo.toml
crates/jarvis-core/src/: lib.rs  supervisor.rs  task.rs
crates/jarvis-providers/: Cargo.toml
crates/jarvis-providers/src/: lib.rs  models.rs  openai.rs  traits.rs
crates/jarvis-sandbox/: Cargo.toml
crates/jarvis-sandbox/src/: lib.rs  runner.rs  windows_job.rs
crates/jarvis-system/: Cargo.toml
crates/jarvis-system/src/: inspection.rs  lib.rs  logs.rs  network.rs  processes.rs
crates/jarvis-tools/: Cargo.toml
crates/jarvis-tools/src/: files.rs  git.rs  google_search.rs  lib.rs  microphone.rs
docs/: ARCHITECTURE.md  GITHUB_INSPIRATION.md  PACKAGING_WINDOWS.md  SECURITY_MODEL.md
scripts/: cargo-dev.ps1
