[workspace]
members = [
    "crates/jarvis-app",
    "crates/jarvis-audit",
    "crates/jarvis-config",
    "crates/jarvis-core",
    "crates/jarvis-providers",
    "crates/jarvis-sandbox",
    "crates/jarvis-system",
    "crates/jarvis-tools",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jarvis"]
license = "Proprietary"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
eframe = "0.29"
egui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
