[package]
name = "jarvis-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
cpal = "0.15"
eframe.workspace = true
egui.workspace = true
hound = "3.5"
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { workspace = true, features = ["blocking"] }
rfd = "0.15"
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
