[package]
name = "jarvis-providers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
jarvis-config = { path = "../jarvis-config" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
